--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -19,7 +19,7 @@
 			crossorigin="anonymous"
 		/>
 
-		<link rel="stylesheet" href="{{ asset('css/style.css') }}" />
+		<link rel="stylesheet" href="css/style.css" />
 
 		<title>Eta-Ki Landing</title>
 	</head>
@@ -160,6 +160,6 @@
 			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 			crossorigin="anonymous"
 		></script>
-		<script src="{{ asset('js/main.js') }}"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
